# DXFExtractor

./: .gitignore  README.md  extract_supported_entities.py  pyproject.toml
dxf_extract/: __init__.py  api.py  config.py  diagnostics.py  extract_circle.py  extract_insert.py  extract_lwpolyline.py  extract_polyline.py  model.py  transforms.py  traverse.py  utils.py
tests/: test_circle.py  test_diagnostics.py  test_insert_basic.py  test_insert_nested.py  test_lwpolyline.py  test_polyline.py
