[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxf-extract"
version = "0.1.0"
description = "DXF geometry extraction (circles + closed polylines)"
requires-python = ">=3.11"
dependencies = [
  "ezdxf>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
